# zunel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE.md  README.md  core_agent_lines.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: README.md  chat-commands.md  (+15 more)
rust/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/crates/zunel/: Cargo.toml
rust/crates/zunel-aws/: Cargo.toml
rust/crates/zunel-aws/src/: lib.rs  profiles.rs  sso_refresh.rs
rust/crates/zunel-aws/tests/: profiles_test.rs  refresh_test.rs
rust/crates/zunel-bus/: Cargo.toml
rust/crates/zunel-bus/src/: events.rs  lib.rs  runtime.rs
rust/crates/zunel-bus/tests/: events_test.rs  runtime_test.rs
rust/crates/zunel-channels/: Cargo.toml
rust/crates/zunel-channels/src/: lib.rs
rust/crates/zunel-channels/src/slack/: api.rs  bot_refresh.rs  inbound.rs  mod.rs
rust/crates/zunel-channels/tests/: manager_test.rs  slack_send_test.rs  slack_socket_test.rs  slack_test.rs
rust/crates/zunel-cli/: Cargo.toml
rust/crates/zunel-cli/src/: approval_cli.rs  cli.rs  lib.rs  main.rs  oauth_callback.rs  renderer.rs  repl.rs  spinner.rs
rust/crates/zunel-cli/src/commands/: agent.rs  channels.rs  gateway.rs  gateway_scheduler.rs  instance.rs  mod.rs  onboard.rs  profile.rs  sessions.rs  slack.rs  status.rs  tokens.rs  util.rs
rust/crates/zunel-cli/tests/: approval_cli_test.rs  channels_cli_test.rs  cli_agent_tools_test.rs  cli_integration.rs  cli_interactive_test.rs  cli_oneshot_streaming_test.rs  gateway_cli_test.rs  instance_as_mcp_smoke_test.rs  instance_cli_test.rs  mcp_agent_test.rs  mcp_cli_test.rs  profile_as_mcp_smoke_test.rs  profile_cli_test.rs  sessions_cli_test.rs  slack_cli_test.rs  status_onboard_cli_test.rs  tokens_cli_test.rs  workspace_guard_cli_test.rs
rust/crates/zunel-config/: Cargo.toml
rust/crates/zunel-config/src/: error.rs  instance.rs  lib.rs  loader.rs  mcp_oauth.rs  paths.rs  profile.rs  schema.rs
rust/crates/zunel-config/tests/: loader_test.rs  paths_test.rs  schema_test.rs  workspace_guard_test.rs  workspace_path_test.rs
rust/crates/zunel-config/tests/fixtures/: minimal.json
rust/crates/zunel-context/: Cargo.toml
rust/crates/zunel-context/src/: builder.rs  error.rs  lib.rs  runtime_tag.rs  templates.rs
rust/crates/zunel-context/templates/: identity.md  max_iterations_message.md  platform_policy.md  skills_section.md
rust/crates/zunel-context/tests/: builder_test.rs  prompt_snapshot_test.rs
rust/crates/zunel-context/tests/fixtures/: python-system-prompt.txt  regenerate-python-prompt.py
rust/crates/zunel-core/: Cargo.toml
rust/crates/zunel-core/src/: agent_loop.rs  approval.rs  command.rs  compaction.rs  default_tools.rs  document.rs  error.rs  hook.rs  lib.rs  mcp_reconnect.rs  memory.rs  runner.rs  session.rs  subagent.rs  trim.rs  usage_footer.rs
rust/crates/zunel-core/src/session/: mod.rs  storage.rs  usage.rs
rust/crates/zunel-core/tests/: agent_loop_extra_system_test.rs  agent_loop_reload_test.rs  agent_loop_skills_test.rs  agent_loop_stream_test.rs  approval_test.rs  bus_loop_test.rs  command_test.rs  compaction_test.rs  document_test.rs  hook_test.rs  idle_compact_trigger_test.rs  loop_test.rs  mcp_reconnect_tool_test.rs  mcp_registry_test.rs  memory_test.rs  runner_cancel_test.rs  runner_settings_test.rs  runner_tool_loop_test.rs  runner_usage_test.rs  session_manager_test.rs  session_test.rs  session_tool_message_test.rs  session_usage_persist_test.rs  subagent_test.rs  trim_test.rs  trim_uses_config_test.rs  usage_footer_test.rs
rust/crates/zunel-core/tests/fixtures/: python_session.jsonl
rust/crates/zunel-cron/: Cargo.toml
rust/crates/zunel-cron/src/: lib.rs
rust/crates/zunel-cron/tests/: service_test.rs
rust/crates/zunel-heartbeat/: Cargo.toml
rust/crates/zunel-heartbeat/src/: lib.rs
rust/crates/zunel-heartbeat/tests/: service_test.rs
rust/crates/zunel-mcp/: Cargo.toml
rust/crates/zunel-mcp-self/: Cargo.toml
rust/crates/zunel-mcp-self/src/: access_log.rs  handlers.rs  http.rs  lib.rs  main.rs
rust/crates/zunel-mcp-self/tests/: http_test.rs  server_test.rs
rust/crates/zunel-mcp-slack/: Cargo.toml
rust/crates/zunel-mcp-slack/src/: lib.rs  main.rs
rust/crates/zunel-mcp-slack/tests/: server_test.rs
rust/crates/zunel-mcp/src/: frame.rs  http.rs  lib.rs  oauth.rs  schema.rs  stdio.rs  wrapper.rs
rust/crates/zunel-mcp/tests/: remote_client_test.rs  schema_normalization_test.rs  stdio_client_test.rs
rust/crates/zunel-providers/: Cargo.toml
rust/crates/zunel-providers/src/: base.rs  build.rs  codex.rs  codex_refresh.rs  error.rs  lib.rs  openai_compat.rs  responses.rs  sse.rs  tool_call_accumulator.rs
rust/crates/zunel-providers/tests/: bedrock_live_test.rs  bedrock_wire_test.rs  build_test.rs  codex_auth_test.rs  codex_provider_test.rs  openai_compat_stream_test.rs  openai_compat_test.rs  openai_compat_tool_calls_test.rs  responses_mapper_test.rs  responses_usage_test.rs  sse_test.rs  sse_tool_calls_test.rs
rust/crates/zunel-skills/: Cargo.toml
rust/crates/zunel-skills/src/: error.rs  frontmatter.rs  lib.rs  loader.rs
rust/crates/zunel-skills/tests/: loader_test.rs
rust/crates/zunel-tokens/: Cargo.toml
rust/crates/zunel-tokens/src/: lib.rs
rust/crates/zunel-tokens/tests/: tokens_test.rs
rust/crates/zunel-tools/: Cargo.toml
rust/crates/zunel-tools/src/: cron.rs  error.rs  file_state.rs  fs.rs  lib.rs  message.rs  path_policy.rs  registry.rs  schema.rs  search.rs  self_tool.rs  shell.rs  spawn.rs  ssrf.rs  tool.rs  web.rs  web_search_providers.rs
rust/crates/zunel-tools/tests/: cron_tool_test.rs  file_state_test.rs  fs_test.rs  message_tool_test.rs  path_policy_test.rs  registry_test.rs  search_test.rs  self_tool_test.rs  shell_test.rs  spawn_tool_test.rs  web_fetch_test.rs  web_search_test.rs
rust/crates/zunel-util/: Cargo.toml
rust/crates/zunel-util/src/: lib.rs  paths.rs  text.rs
rust/crates/zunel-util/tests/: paths_test.rs
rust/crates/zunel/src/: lib.rs
rust/crates/zunel/tests/: facade_stream_test.rs  facade_test.rs  facade_tools_test.rs
(+252 files in other folders)
