[workspace]
resolver = "2"
members = [
    "crates/zunel-config",
    "crates/zunel-bus",
    "crates/zunel-util",
    "crates/zunel-providers",
    "crates/zunel-tokens",
    "crates/zunel-skills",
    "crates/zunel-context",
    "crates/zunel-tools",
    "crates/zunel-mcp",
    "crates/zunel-core",
    "crates/zunel-cli",
    "crates/zunel",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/<org>/zunel"
authors = ["zunel contributors"]

[workspace.dependencies]
# Async runtime + logging
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streams
futures = "0.3"
async-stream = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
reedline = "0.37"

# Errors
thiserror = "1"
anyhow = "1"

# Paths / env
dirs = "5"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Test deps
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
tempfile = "3"
serial_test = "3"
proptest = "1.5"

# Internal crate paths. Versions are pinned to the workspace version so
# cargo-deny does not flag them as wildcard deps on publishable crates.
zunel-config = { path = "crates/zunel-config", version = "=0.2.0" }
zunel-bus = { path = "crates/zunel-bus", version = "=0.2.0" }
zunel-util = { path = "crates/zunel-util", version = "=0.2.0" }
zunel-providers = { path = "crates/zunel-providers", version = "=0.2.0" }
zunel-tokens = { path = "crates/zunel-tokens", version = "=0.2.0" }
zunel-skills = { path = "crates/zunel-skills", version = "=0.2.0" }
zunel-context = { path = "crates/zunel-context", version = "=0.2.0" }
zunel-tools = { path = "crates/zunel-tools", version = "=0.2.0" }
zunel-mcp = { path = "crates/zunel-mcp", version = "=0.2.0" }
zunel-core = { path = "crates/zunel-core", version = "=0.2.0" }

# Token counting
tiktoken-rs = "0.7"

# Skills / context
serde_yaml = "0.9"
walkdir = "2"
which = "6"
minijinja = "2"

# Tools
async-trait = "0.1"
globset = "0.4"
htmd = "0.5"
ignore = "0.4"
regex = "1"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-musl"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Slice 1 deliberately does not flip on any release trigger.
# Slice 7 enables it when the CLI reaches parity.
# `allow-dirty = ["ci"]` tells dist to accept our manually-commented-out
# `push: tags` trigger in release.yml without trying to regenerate it.
allow-dirty = ["ci"]
