[package]
name = "zunel-aws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AWS SSO credential auto-refresh for the zunel gateway."

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt", "rt-multi-thread"] }
tracing.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread", "time"] }
