[package]
name = "zunel-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
zunel-bus.workspace = true
zunel-config.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
