[package]
name = "zunel-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zunel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
reedline.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zunel-bus.workspace = true
zunel-config.workspace = true
zunel-core.workspace = true
zunel-providers.workspace = true
zunel-tools.workspace = true
zunel-util.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
predicates = "3"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread"] }
