[package]
name = "zunel-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
serial_test.workspace = true
