[package]
name = "zunel-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zunel-skills.workspace = true
zunel-tokens.workspace = true

[dev-dependencies]
tempfile.workspace = true
