[package]
name = "zunel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zunel-bus.workspace = true
zunel-config.workspace = true
zunel-providers.workspace = true

[dev-dependencies]
async-trait = "0.1"
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
