[package]
name = "zunel-cron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz = "0.10.4"
cron = "0.16.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
