[package]
name = "zunel-heartbeat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
zunel-config.workspace = true
zunel-providers.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
