[package]
name = "zunel-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zunel-config.workspace = true

[dev-dependencies]
wiremock = { workspace = true }
insta = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
proptest = { workspace = true }
