[package]
name = "zunel-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
include_dir.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
