[package]
name = "zunel-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
globset.workspace = true
htmd.workspace = true
ignore.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process", "io-util", "time", "sync", "rt"] }
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
walkdir.workspace = true
which.workspace = true
zunel-bus.workspace = true
zunel-config.workspace = true
zunel-providers.workspace = true
zunel-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
